<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    tools:context="com.druzbanarodov.relativlayoutjava.Navigation_Nome_Menu"
    tools:showIn="@layout/app_bar_navigation_2level">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_header_other"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="0.3"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/button_single_player"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/main_menu_single_player_btn"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:background="@drawable/button_blue"/>

        <Button
            android:id="@+id/button_multiplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_blue"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/main_menu_multi_player_btn"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="17sp"
            android:visibility="visible"/>

        <Button
            android:id="@+id/button_show_nations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_blue"
            android:text="@string/main_menu_show_nations"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="17sp"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>